--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,11 @@ if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
 
-MACRO(ADD_SUBLIBRARY LIBRARY_NAME)
+MACRO(ADD_SUBLIBRARY LIBRARY_NAME RELATIVE_PATH)
   #Compute required sources
   file(GLOB SUBLIBRARY_SOURCES 
-    "src/${LIBRARY_NAME}/*.c" 
-    "src/${LIBRARY_NAME}/*.h")
+    "${RELATIVE_PATH}/*.c" 
+    "${RELATIVE_PATH}/*.h")
 
   #Create library
   ADD_LIBRARY(${LIBRARY_NAME} STATIC ${SUBLIBRARY_SOURCES})
@@ -19,7 +19,14 @@ MACRO(ADD_SUBLIBRARY LIBRARY_NAME)
 
 ENDMACRO(ADD_SUBLIBRARY)
 
-ADD_SUBLIBRARY(LEXER)
+# Disable deprecation for windows
+add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
+
+ADD_SUBLIBRARY(UTILS src/utils)
+set_target_properties(UTILS PROPERTIES OUTPUT_NAME utils) # utils.lib
+set_property(TARGET UTILS PROPERTY C_STANDARD 90)
+
+ADD_SUBLIBRARY(LEXER src/lexer)
 set_target_properties(LEXER PROPERTIES OUTPUT_NAME lexer) # lexer.lib
 set_property(TARGET LEXER PROPERTY C_STANDARD 90)
 
