--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ set_target_properties(CARBON PROPERTIES OUTPUT_NAME carbon) # carbon.exe
 set_property(TARGET CARBON PROPERTY C_STANDARD 90)
 
 #Link any of the created libraries
-TARGET_LINK_LIBRARIES(CARBON LEXER)
+TARGET_LINK_LIBRARIES(CARBON UTILS LEXER)
 
 # Set CARBON as the startup project
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT CARBON)
