Attempts to enforce and conform to ANSI C (C89/C90)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.6)
 project(CARBON)
 
+if (UNIX)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c89 -pedantic")
+endif(UNIX)
+
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
