--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,11 @@ set_target_properties(LEXER PROPERTIES OUTPUT_NAME lexer) # lexer.lib
 
 TARGET_LINK_LIBRARIES(LEXER UTILS)
 
+ADD_SUBLIBRARY(PARSER src/parser)
+set_target_properties(PARSER PROPERTIES OUTPUT_NAME parser) # parser.lib
+
+TARGET_LINK_LIBRARIES(PARSER LEXER UTILS)
+
 file(GLOB EXECUTABLE_SOURCES 
     "src/main.c" 
 )
