Able to get through var node parsing (not rhs expressions yet) without errors. Updated main.c to call parse(...)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ ADD_EXECUTABLE(CARBON ${EXECUTABLE_SOURCES})
 set_target_properties(CARBON PROPERTIES OUTPUT_NAME carbon) # carbon.exe
 
 #Link any of the created libraries
-TARGET_LINK_LIBRARIES(CARBON UTILS LEXER)
+TARGET_LINK_LIBRARIES(CARBON UTILS LEXER PARSER)
 
 # Set CARBON as the startup project
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT CARBON)
