Fixed bug in CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ MACRO(ADD_SUBLIBRARY LIBRARY_NAME RELATIVE_PATH)
   ADD_LIBRARY(${LIBRARY_NAME} STATIC ${SUBLIBRARY_SOURCES})
 
   #add this library's header folder to the global include set
-  INCLUDE_DIRECTORIES("src/${LIBRARY_NAME}")
+  INCLUDE_DIRECTORIES("${RELATIVE_PATH}")
 
 ENDMACRO(ADD_SUBLIBRARY)
 
