Created ast.lib and move AST nodes to separate directory to keep things clean. Parser links with ast.lib now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,10 +36,13 @@ set_target_properties(LEXER PROPERTIES OUTPUT_NAME lexer) # lexer.lib
 
 TARGET_LINK_LIBRARIES(LEXER UTILS)
 
+ADD_SUBLIBRARY(AST src/ast)
+set_target_properties(AST PROPERTIES OUTPUT_NAME ast) # ast.lib
+
 ADD_SUBLIBRARY(PARSER src/parser)
 set_target_properties(PARSER PROPERTIES OUTPUT_NAME parser) # parser.lib
 
-TARGET_LINK_LIBRARIES(PARSER LEXER UTILS)
+TARGET_LINK_LIBRARIES(PARSER LEXER UTILS AST)
 
 file(GLOB EXECUTABLE_SOURCES 
     "src/main.c" 
