Setup simple and elegant test suite. Time to start adding tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,3 +58,13 @@ TARGET_LINK_LIBRARIES(CARBON UTILS LEXER PARSER)
 
 # Set CARBON as the startup project
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT CARBON)
+
+# Tests
+file(GLOB TESTS_SOURCES 
+    "tests/*.c" 
+    "tests/*.h"
+)
+INCLUDE_DIRECTORIES("tests")
+ADD_EXECUTABLE(TESTS ${TESTS_SOURCES})
+set_target_properties(TESTS PROPERTIES OUTPUT_NAME tests) # tests.exe
+TARGET_LINK_LIBRARIES(TESTS UTILS LEXER PARSER)
