Added check target that runs unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,3 +68,12 @@ INCLUDE_DIRECTORIES("tests")
 ADD_EXECUTABLE(TESTS ${TESTS_SOURCES})
 set_target_properties(TESTS PROPERTIES OUTPUT_NAME tests) # tests.exe
 TARGET_LINK_LIBRARIES(TESTS UTILS LEXER PARSER)
+
+enable_testing ()
+add_test (NAME UNIT_TESTS COMMAND tests)
+add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND}
+    --force-new-ctest-process
+    --verbose
+    --output-on-failure
+    DEPENDS tests
+)
