Hooked up evaluator project. Able to evaluate integer literals

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,11 @@ TARGET_LINK_LIBRARIES(PARSER LEXER UTILS AST)
 ADD_SUBLIBRARY(OBJECT src/object)
 set_target_properties(OBJECT PROPERTIES OUTPUT_NAME object) # object.lib
 
+# Evaluator library
+ADD_SUBLIBRARY(EVALUATOR src/evaluator)
+set_target_properties(EVALUATOR PROPERTIES OUTPUT_NAME evaluator) # evaluator.lib
+TARGET_LINK_LIBRARIES(EVALUATOR OBJECT PARSER LEXER UTILS AST)
+
 # Main executable
 file(GLOB EXECUTABLE_SOURCES 
     "src/main.c" 
@@ -58,7 +63,7 @@ ADD_EXECUTABLE(CARBON ${EXECUTABLE_SOURCES})
 set_target_properties(CARBON PROPERTIES OUTPUT_NAME carbon) # carbon.exe
 
 #Link any of the created libraries
-TARGET_LINK_LIBRARIES(CARBON UTILS LEXER PARSER)
+TARGET_LINK_LIBRARIES(CARBON UTILS LEXER PARSER EVALUATOR)
 
 # Set CARBON as the startup project
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT CARBON)
