Added starts_with method to lexer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 3.6)
-set(PROJECT_NAME ULANG)
-set(PROJECT_NAME_LOWERCASE ulang)
-project(${PROJECT_NAME})
+project(ULANG)
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
@@ -39,11 +37,11 @@ TARGET_LINK_LIBRARIES(LEXER UTF8)
 file(GLOB EXECUTABLE_SOURCES 
     "src/main.cpp" 
 )
-ADD_EXECUTABLE(${PROJECT_NAME} ${EXECUTABLE_SOURCES})
-set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_NAME_LOWERCASE})
+ADD_EXECUTABLE(ULANG ${EXECUTABLE_SOURCES})
+set_target_properties(ULANG PROPERTIES OUTPUT_NAME ulang)
 
 #Link any of the created libraries
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} UTF8 LEXER)
+TARGET_LINK_LIBRARIES(ULANG UTF8 LEXER)
 
 # Set ${PROJECT_NAME} as the startup project
-set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
+set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ULANG)
