--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,3 +45,4 @@ TARGET_LINK_LIBRARIES(ULANG UTF8 LEXER)
 
 # Set ${PROJECT_NAME} as the startup project
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ULANG)
+set_property(TARGET ULANG PROPERTY CXX_STANDARD 11)
