Added parser lib project to CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,11 @@ ADD_SUBLIBRARY(LEXER src/lexer)
 set_target_properties(LEXER PROPERTIES OUTPUT_NAME lexer) # lexer.lib
 TARGET_LINK_LIBRARIES(LEXER UTF8)
 
+# Parser library
+ADD_SUBLIBRARY(PARSER src/parser)
+set_target_properties(PARSER PROPERTIES OUTPUT_NAME parser) # parser.lib
+TARGET_LINK_LIBRARIES(PARSER LEXER) 
+
 # Main executable
 file(GLOB EXECUTABLE_SOURCES 
     "src/main.cpp" 
