--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ ADD_EXECUTABLE(ULANG ${EXECUTABLE_SOURCES})
 set_target_properties(ULANG PROPERTIES OUTPUT_NAME ulang)
 
 #Link any of the created libraries
-TARGET_LINK_LIBRARIES(ULANG UTF8 LEXER PARSER)
+TARGET_LINK_LIBRARIES(ULANG UTF8 LEXER PARSER EVALUATOR)
 
 # Set ${PROJECT_NAME} as the startup project
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ULANG)
