Updated CMakeLists - Calling this carbon now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.6)
-project(ULANG)
+project(CARBON)
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
@@ -57,12 +57,12 @@ TARGET_LINK_LIBRARIES(EVALUATOR PARSER)
 file(GLOB EXECUTABLE_SOURCES 
     "src/main.cpp" 
 )
-ADD_EXECUTABLE(ULANG ${EXECUTABLE_SOURCES})
-set_target_properties(ULANG PROPERTIES OUTPUT_NAME ulang)
+ADD_EXECUTABLE(CARBON ${EXECUTABLE_SOURCES})
+set_target_properties(CARBON PROPERTIES OUTPUT_NAME carbon)
 
 #Link any of the created libraries
-TARGET_LINK_LIBRARIES(ULANG UTF8 LEXER PARSER EVALUATOR)
+TARGET_LINK_LIBRARIES(CARBON UTF8 LEXER PARSER EVALUATOR)
 
 # Set ${PROJECT_NAME} as the startup project
-set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ULANG)
-set_property(TARGET ULANG PROPERTY CXX_STANDARD 11)
+set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT CARBON)
+set_property(TARGET CARBON PROPERTY CXX_STANDARD 11)
