--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ set_target_properties(MODEL PROPERTIES LINKER_LANGUAGE CXX)
 # EVALUATOR library
 ADD_SUBLIBRARY(EVALUATOR src/evaluator)
 set_target_properties(EVALUATOR PROPERTIES OUTPUT_NAME evaluator) # evaluator.lib
-TARGET_LINK_LIBRARIES(EVALUATOR PARSER) 
+TARGET_LINK_LIBRARIES(EVALUATOR PARSER MODEL) 
 
 # Main executable
 file(GLOB EXECUTABLE_SOURCES 
@@ -61,7 +61,7 @@ ADD_EXECUTABLE(CARBON ${EXECUTABLE_SOURCES})
 set_target_properties(CARBON PROPERTIES OUTPUT_NAME carbon)
 
 #Link any of the created libraries
-TARGET_LINK_LIBRARIES(CARBON UTF8 LEXER PARSER EVALUATOR)
+TARGET_LINK_LIBRARIES(CARBON UTF8 LEXER PARSER EVALUATOR MODEL)
 
 # Set ${PROJECT_NAME} as the startup project
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT CARBON)
