Renamed model to object and changed project name to OBJECT_MODEL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,15 +43,15 @@ ADD_SUBLIBRARY(PARSER src/parser)
 set_target_properties(PARSER PROPERTIES OUTPUT_NAME parser) # parser.lib
 TARGET_LINK_LIBRARIES(PARSER LEXER AST) 
 
-# MODEL library
-ADD_SUBLIBRARY(MODEL src/model)
-set_target_properties(MODEL PROPERTIES OUTPUT_NAME model) # model.lib
-set_target_properties(MODEL PROPERTIES LINKER_LANGUAGE CXX)
+# OBJECT_MODEL library
+ADD_SUBLIBRARY(OBJECT_MODEL src/object)
+set_target_properties(OBJECT_MODEL PROPERTIES OUTPUT_NAME object) # object_model.lib
+set_target_properties(OBJECT_MODEL PROPERTIES LINKER_LANGUAGE CXX)
 
 # EVALUATOR library
 ADD_SUBLIBRARY(EVALUATOR src/evaluator)
 set_target_properties(EVALUATOR PROPERTIES OUTPUT_NAME evaluator) # evaluator.lib
-TARGET_LINK_LIBRARIES(EVALUATOR PARSER MODEL) 
+TARGET_LINK_LIBRARIES(EVALUATOR PARSER OBJECT_MODEL) 
 
 # Main executable
 file(GLOB EXECUTABLE_SOURCES 
@@ -61,7 +61,7 @@ ADD_EXECUTABLE(CARBON ${EXECUTABLE_SOURCES})
 set_target_properties(CARBON PROPERTIES OUTPUT_NAME carbon)
 
 #Link any of the created libraries
-TARGET_LINK_LIBRARIES(CARBON UTF8 LEXER PARSER EVALUATOR MODEL)
+TARGET_LINK_LIBRARIES(CARBON UTF8 LEXER PARSER EVALUATOR OBJECT_MODEL)
 
 # Set ${PROJECT_NAME} as the startup project
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT CARBON)
