Changed project name to Walnut

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.6)
-project(CARBON)
+project(WALNUT)
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
@@ -57,15 +57,15 @@ TARGET_LINK_LIBRARIES(EVALUATOR PARSER OBJECT_MODEL)
 file(GLOB EXECUTABLE_SOURCES 
     "src/main.cpp" 
 )
-ADD_EXECUTABLE(CARBON ${EXECUTABLE_SOURCES})
-set_target_properties(CARBON PROPERTIES OUTPUT_NAME carbon)
+ADD_EXECUTABLE(WALNUT ${EXECUTABLE_SOURCES})
+set_target_properties(WALNUT PROPERTIES OUTPUT_NAME walnut)
 
 #Link any of the created libraries
-TARGET_LINK_LIBRARIES(CARBON UTF8 LEXER PARSER EVALUATOR OBJECT_MODEL)
+TARGET_LINK_LIBRARIES(WALNUT UTF8 LEXER PARSER EVALUATOR OBJECT_MODEL)
 
 # Set ${PROJECT_NAME} as the startup project
-set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT CARBON)
-set_property(TARGET CARBON PROPERTY CXX_STANDARD 11)
+set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT WALNUT)
+set_property(TARGET WALNUT PROPERTY CXX_STANDARD 11)
 
 # Tests
 file(GLOB TESTS_SOURCES 
