Integrated strcpp from the catalyst repo. Implemented split and join as part of the string builtin functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,13 +45,18 @@ TARGET_LINK_LIBRARIES(PARSER LEXER AST)
 
 # OBJECT_MODEL library
 ADD_SUBLIBRARY(OBJECT_MODEL src/object)
-set_target_properties(OBJECT_MODEL PROPERTIES OUTPUT_NAME object) # object_model.lib
+set_target_properties(OBJECT_MODEL PROPERTIES OUTPUT_NAME object) # object.lib
 set_target_properties(OBJECT_MODEL PROPERTIES LINKER_LANGUAGE CXX)
+
+# STRCPP library
+ADD_SUBLIBRARY(STRCPP src/strcpp)
+set_target_properties(STRCPP PROPERTIES OUTPUT_NAME strcpp) # strcpp.lib
+set_target_properties(STRCPP PROPERTIES LINKER_LANGUAGE CXX)
 
 # EVALUATOR library
 ADD_SUBLIBRARY(EVALUATOR src/evaluator)
 set_target_properties(EVALUATOR PROPERTIES OUTPUT_NAME evaluator) # evaluator.lib
-TARGET_LINK_LIBRARIES(EVALUATOR PARSER OBJECT_MODEL) 
+TARGET_LINK_LIBRARIES(EVALUATOR PARSER OBJECT_MODEL STRCPP) 
 
 # Main executable
 file(GLOB EXECUTABLE_SOURCES 
