Import works now as expected. Able to run a walnut program from anywhere even if that walnut program is importing from its relative path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,8 @@ set_target_properties(STRING PROPERTIES LINKER_LANGUAGE CXX)
 # EVALUATOR library
 ADD_SUBLIBRARY(EVALUATOR src/evaluator)
 set_target_properties(EVALUATOR PROPERTIES OUTPUT_NAME evaluator) # evaluator.lib
-TARGET_LINK_LIBRARIES(EVALUATOR PARSER OBJECT_MODEL STRING) 
+TARGET_LINK_LIBRARIES(EVALUATOR PARSER OBJECT_MODEL STRING)
+set_property(TARGET EVALUATOR PROPERTY CXX_STANDARD 17)
 
 # Main executable
 file(GLOB EXECUTABLE_SOURCES 
