Updated CMakelists for linux to use experimental/filesystem - this will change once gcc lets me include <filesystem> directly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,9 @@ ADD_SUBLIBRARY(EVALUATOR src/evaluator)
 set_target_properties(EVALUATOR PROPERTIES OUTPUT_NAME evaluator) # evaluator.lib
 TARGET_LINK_LIBRARIES(EVALUATOR PARSER OBJECT_MODEL STRING)
 set_property(TARGET EVALUATOR PROPERTY CXX_STANDARD 17)
+if (UNIX)
+TARGET_LINK_LIBRARIES(EVALUATOR PARSER OBJECT_MODEL STRING stdc++fs)
+endif()
 
 # Main executable
 file(GLOB EXECUTABLE_SOURCES 
@@ -71,7 +74,7 @@ TARGET_LINK_LIBRARIES(WALNUT UTF8 LEXER PARSER EVALUATOR OBJECT_MODEL)
 
 # Set ${PROJECT_NAME} as the startup project
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT WALNUT)
-set_property(TARGET WALNUT PROPERTY CXX_STANDARD 11)
+set_property(TARGET WALNUT PROPERTY CXX_STANDARD 17)
 
 # Tests
 file(GLOB TESTS_SOURCES 
