Renamed AST to ABSTRACT_SYNTAX_TREE for consistency with rest of project names

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,20 +33,20 @@ ADD_SUBLIBRARY(STRING src/string)
 set_target_properties(STRING PROPERTIES OUTPUT_NAME string) # string.lib
 set_target_properties(STRING PROPERTIES LINKER_LANGUAGE CXX)
 
-# AST library
-ADD_SUBLIBRARY(AST src/ast)
-set_target_properties(AST PROPERTIES OUTPUT_NAME ast) # ast.lib
-set_target_properties(AST PROPERTIES LINKER_LANGUAGE CXX)
+# ABSTRACT_SYNTAX_TREE library
+ADD_SUBLIBRARY(ABSTRACT_SYNTAX_TREE src/ast)
+set_target_properties(ABSTRACT_SYNTAX_TREE PROPERTIES OUTPUT_NAME ast) # ast.lib
+set_target_properties(ABSTRACT_SYNTAX_TREE PROPERTIES LINKER_LANGUAGE CXX)
 
 # Lexer library
 ADD_SUBLIBRARY(LEXER src/lexer)
 set_target_properties(LEXER PROPERTIES OUTPUT_NAME lexer) # lexer.lib
-TARGET_LINK_LIBRARIES(LEXER UTF8 AST)
+TARGET_LINK_LIBRARIES(LEXER UTF8 ABSTRACT_SYNTAX_TREE)
 
 # Parser library
 ADD_SUBLIBRARY(PARSER src/parser)
 set_target_properties(PARSER PROPERTIES OUTPUT_NAME parser) # parser.lib
-TARGET_LINK_LIBRARIES(PARSER LEXER AST STRING) 
+TARGET_LINK_LIBRARIES(PARSER LEXER ABSTRACT_SYNTAX_TREE STRING) 
 
 # OBJECT_MODEL library
 ADD_SUBLIBRARY(OBJECT_MODEL src/object)
