Moved around some files to reduce number of folders

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,26 +24,22 @@ if (WIN32)
 	add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
 endif()
 
-# UTF-8 library
-ADD_SUBLIBRARY(UTF8 src/utf8)
-set_target_properties(UTF8 PROPERTIES OUTPUT_NAME utf8) # utf8.lib
-
 # STRING library
 ADD_SUBLIBRARY(STRING src/string)
 set_target_properties(STRING PROPERTIES OUTPUT_NAME string) # string.lib
 set_target_properties(STRING PROPERTIES LINKER_LANGUAGE CXX)
+
+# LEXER library
+ADD_SUBLIBRARY(LEXER src/lexer)
+set_target_properties(LEXER PROPERTIES OUTPUT_NAME lexer) # lexer.lib
+TARGET_LINK_LIBRARIES(LEXER STRING)
 
 # ABSTRACT_SYNTAX_TREE library
 ADD_SUBLIBRARY(ABSTRACT_SYNTAX_TREE src/ast)
 set_target_properties(ABSTRACT_SYNTAX_TREE PROPERTIES OUTPUT_NAME ast) # ast.lib
 set_target_properties(ABSTRACT_SYNTAX_TREE PROPERTIES LINKER_LANGUAGE CXX)
 
-# Lexer library
-ADD_SUBLIBRARY(LEXER src/lexer)
-set_target_properties(LEXER PROPERTIES OUTPUT_NAME lexer) # lexer.lib
-TARGET_LINK_LIBRARIES(LEXER UTF8 ABSTRACT_SYNTAX_TREE)
-
-# Parser library
+# PARSER library
 ADD_SUBLIBRARY(PARSER src/parser)
 set_target_properties(PARSER PROPERTIES OUTPUT_NAME parser) # parser.lib
 TARGET_LINK_LIBRARIES(PARSER LEXER ABSTRACT_SYNTAX_TREE STRING) 
@@ -70,7 +66,7 @@ ADD_EXECUTABLE(WALNUT ${EXECUTABLE_SOURCES})
 set_target_properties(WALNUT PROPERTIES OUTPUT_NAME walnut)
 
 #Link any of the created libraries
-TARGET_LINK_LIBRARIES(WALNUT UTF8 LEXER PARSER EVALUATOR OBJECT_MODEL)
+TARGET_LINK_LIBRARIES(WALNUT STRING LEXER PARSER EVALUATOR OBJECT_MODEL)
 
 # Set ${PROJECT_NAME} as the startup project
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT WALNUT)
@@ -84,7 +80,7 @@ file(GLOB TESTS_SOURCES
 INCLUDE_DIRECTORIES("tests")
 ADD_EXECUTABLE(TESTS ${TESTS_SOURCES})
 set_target_properties(TESTS PROPERTIES OUTPUT_NAME tests) # tests.exe
-TARGET_LINK_LIBRARIES(TESTS UTF8 LEXER PARSER EVALUATOR)
+TARGET_LINK_LIBRARIES(TESTS STRING LEXER PARSER EVALUATOR)
 
 # make check - runs unit tests
 if (UNIX)
