--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ set_target_properties(ABSTRACT_SYNTAX_TREE PROPERTIES LINKER_LANGUAGE CXX)
 # PARSER library
 ADD_SUBLIBRARY(PARSER src/parser)
 set_target_properties(PARSER PROPERTIES OUTPUT_NAME parser) # parser.lib
-TARGET_LINK_LIBRARIES(PARSER LEXER ABSTRACT_SYNTAX_TREE STRING) 
+TARGET_LINK_LIBRARIES(PARSER LEXER STRING) 
 
 # OBJECT_MODEL library
 ADD_SUBLIBRARY(OBJECT_MODEL src/object)
